Fix images from being too big

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -148,10 +148,17 @@ h3 {
 	border: 1px solid #666;
 }
 
-.user_picture {
+div.user_picture {
 	float: left;
 	margin-right: 20px;
 	margin-bottom: 20px;
+}
+
+img.user_picture {
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	max-width: 400px;
 }
 
 .user_picture img {	
